# WoldsVaultsDeckOptimizer

./: .gitignore  CLAUDE.md  INVENTORY_OPTIMIZER_PLAN.md  NDM_Optimizer_Rust.py  README.md  config.yaml  modifiers.json  optimizer.py  pyproject.toml
.github/workflows/: deploy.yml
decks/: 01_cake.yaml  02_anvil.yaml  03_puzzle.yaml  04_tenos.yaml  05_velara.yaml  06_mystery.yaml  07_skull.yaml  08_fred.yaml  09_shard.yaml  10_starter.yaml  11_large.yaml  12_double.yaml  README.md  moon.yaml  wolds_decks.json
ndm_core/: Cargo.toml  pyproject.toml
ndm_core/src/: batch.rs  inventory.rs  lib.rs  wasm_api.rs
scripts/: build_data.py  wasm_parity_check.mjs
src/: __init__.py  config.py  gui.py  inventory_optimize.py  main.py  modifiers.py  preview.py  report.py  simulate.py  types.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte
web/src/components/: AssignDialog.svelte  BreakdownDialog.svelte  CorePicker.svelte  DeckGrid.svelte  InventoryTable.svelte  Legend.svelte  ModeToggle.svelte  StatsPanel.svelte
web/src/lib/: breakdown.ts  config.ts  coreOptions.ts  cores.ts  deck.ts  formatBreakdown.ts  modifiers.ts  optimize.ts  palette.ts  preview.ts  state.svelte.ts  types.ts  workerClient.ts
web/src/worker/: optimize.worker.ts
