[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ndm_core"
version = "0.1.0"
description = "Rust simulation core for the Wold's Vaults NDM optimizer."
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
profile = "release"
